cmake_minimum_required(VERSION 3.8)
project(TCP)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(TEST_TARGET_NAME ${CMAKE_PROJECT_NAME}_TEST)
enable_testing()
include_directories(src)
find_package(common REQUIRED)
find_package(Boost REQUIRED)
add_subdirectory(src)
add_subdirectory(test)