add_compile_definitions(WIN32_LEAN_AND_MEAN)
add_executable(${TEST_TARGET_NAME} tcp_session_test.cpp)
target_link_libraries(${TEST_TARGET_NAME} PRIVATE COMMON::COMMON ${CMAKE_PROJECT_NAME})
target_include_directories(${TEST_TARGET_NAME} PRIVATE "${OPENSSL_INCLUDE_DIR}" "${Boost_INCLUDE_DIRS}")
add_test(NAME test COMMAND ${TEST_TARGET_NAME})